deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pamkutya-frontend-deployment
spec:
  selector:
    matchLabels:
      app: pamkutya-frontend
  template:
    metadata:
      labels:
        app: pamkutya-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: pamkutya-frontend
          image: ghcr.io/milanmarko/pamkutya-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pamkutya-frontend-cluster-ip-service
spec:
  selector:
    app: pamkutya-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pamkutya-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pamkutya.jcloud.jedlik.cloud
      secretName: pamkutya-frontend-certificate

  rules:
    - host: pamkutya.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pamkutya-frontend-cluster-ip-service
                port:
                  number: 80
---
